# aroma

./: .gitignore  Cargo.toml
aroma_std/src/: std.aroma
crates/aroma_analyzer/: Cargo.toml
crates/aroma_analyzer/src/: main.rs
crates/aroma_ast/: Cargo.toml  README.md
crates/aroma_ast/src/: block.rs  expr.rs  id.rs  identifier.rs  items.rs  lib.rs  method.rs  mir.rs  references.rs  spanned.rs  statements.rs  token.rs  translation_unit.rs  typed.rs
crates/aroma_ast/src/mir/: block.rs  expr.rs  items.rs  method.rs  references.rs  statements.rs  translation_unit.rs  typed.rs
crates/aroma_ast_derive/: Cargo.toml
crates/aroma_ast_derive/src/: lib.rs
crates/aroma_ast_parsing/: Cargo.toml  README.md
crates/aroma_ast_parsing/src/: lexer.rs  lib.rs  parser.rs  type_resolution.rs
crates/aroma_ast_parsing/src/lexer/: blocking.rs  nom_buf_reader.rs  non_blocking.rs  token_parsing.rs
crates/aroma_ast_parsing/src/parser/: error.rs  hir.rs  hir_parser.rs  semantic_transform.rs  syntactic_parser.rs  traits.rs  transforms.rs
crates/aroma_ast_parsing/src/parser/hir/: annotation.rs  binding.rs  constants.rs  expr.rs  helpers.rs  items.rs  singletons.rs  statement.rs  translation_unit.rs
crates/aroma_ast_parsing/src/parser/hir/items/: item_class.rs  item_function.rs  item_interface.rs  item_native_function.rs
crates/aroma_ast_parsing/src/parser/hir_parser/: blocking.rs  traits.rs
crates/aroma_ast_parsing/src/parser/hir_parser/traits/: blocking.rs
crates/aroma_ast_parsing/src/parser/semantic_transform/: transform_type_resolution.rs
crates/aroma_ast_parsing/src/parser/syntactic_parser/: error.rs  hir.rs  syntax_tree.rs  transforms.rs
crates/aroma_ast_parsing/src/parser/syntactic_parser/hir/: annotation.rs  binding.rs  constants.rs  expr.rs  helpers.rs  items.rs  singletons.rs  statement.rs  translation_unit.rs
crates/aroma_ast_parsing/src/parser/syntactic_parser/hir/items/: item_class.rs  item_function.rs  item_interface.rs
crates/aroma_ast_parsing/src/parser/syntactic_parser/syntax_tree/: binding.rs  constants.rs  expr.rs  helpers.rs  items.rs  singletons.rs  statement.rs
crates/aroma_ast_parsing/src/parser/syntactic_parser/transforms/: to_fqi.rs  to_mir.rs  transform_combinators.rs
crates/aroma_ast_parsing/src/parser/syntactic_parser/transforms/to_mir/: class_hir_to_mir.rs  expr_hir_to_mir.rs  interface_hir_to_mir.rs  method_hir_to_mir.rs
crates/aroma_ast_parsing/src/parser/transforms/: to_mir.rs  transform_combinators.rs
crates/aroma_ast_parsing/src/parser/transforms/to_mir/: class_hir_to_mir.rs  constructor_hir_to_mir.rs  expr_hir_to_mir.rs  interface_hir_to_mir.rs  method_hir_to_mir.rs
crates/aroma_ast_parsing_derive/: Cargo.toml
crates/aroma_bytecode/: Cargo.toml  README.md
crates/aroma_bytecode/src/: chunk.rs  lib.rs
crates/aroma_bytecode/src/chunk/: constant.rs  iterator.rs  opcode.rs  visitor.rs
crates/aroma_cli_common/: Cargo.toml  README.md
crates/aroma_cli_common/src/: lib.rs
crates/aroma_common/: Cargo.toml  README.md
crates/aroma_files/: Cargo.toml  README.md
crates/aroma_gc/: Cargo.toml
crates/aroma_gc/benches/: aroma_gc_benchmarks.rs  free_list_benches.rs
crates/aroma_gc/src/: gc.rs  gc_box.rs  gc_heap.rs  internal_collections.rs  lib.rs  static_linked_list.rs  tracer.rs
crates/aroma_gc/src/gc_heap/: free_list.rs  generation_bump_heap.rs  indirection_table.rs  memory_lock.rs  move_guard.rs
crates/aroma_gc/src/internal_collections/: static_linked_list.rs
crates/aroma_gc/src/internal_collections/static_linked_list/: iters.rs  sort.rs
crates/aroma_gc/tests/: allocate_many.rs
crates/aroma_gc_derive/: Cargo.toml
crates/aroma_gc_derive/src/: lib.rs
crates/aroma_language_server/: Cargo.toml  README.md
crates/aroma_language_server/src/: language_server.rs  lib.rs
crates/aroma_language_server_cli/: Cargo.toml
crates/aroma_tasks/: Cargo.toml  README.md
crates/aroma_tasks/src/: lib.rs  state.rs  task.rs  task_executor.rs  task_graph.rs
crates/aroma_tokens/: Cargo.toml
crates/aroma_tokens/src/: id.rs  id_resolver.rs  lib.rs  spanned.rs  token.rs
crates/aroma_tokens_derive/: Cargo.toml
crates/aroma_types/: Cargo.toml  README.md
crates/aroma_types/src/: class.rs  constructor.rs  delegate.rs  field.rs  functions.rs  generic.rs  hierarchy.rs  lib.rs  method.rs  type_signature.rs  vis.rs
crates/aroma_types/src/hierarchy/: intrinsics.rs
crates/aroma_visitor_gen/: Cargo.toml
crates/aroma_vm/: Cargo.toml  README.md  build.rs
crates/aroma_vm/examples/: factorial.rs  fibonacci.rs  fibonacci_jit_compare.rs
crates/aroma_vm/src/: binary.rs  binary_format.rs  chunk.rs  debug.rs  examples.rs  function.rs  jit.rs  lib.rs  macros.rs  types.rs  vm.rs
crates/aroma_vm/src/chunk/: visitor.rs
crates/aroma_vm/src/jit/: abi.rs  ir.rs
crates/aroma_vm/src/jit/ir/: ir_builder.rs  ir_compiler.rs  ir_op.rs
crates/aroma_vm/src/jit/ir/ir_compiler/: offset_graph.rs
crates/aroma_vm/src/types/: closures.rs  function.rs  obj.rs
crates/aroma_vm/src/vm/: error.rs  natives.rs  thread_executor.rs
crates/aroma_vm/tests/: fibonacci.rs
crates/aroma_vm_gc/: Cargo.toml
crates/aromac/: Cargo.toml  README.md
crates/aromac/src/: args.rs  common.rs  compiler.rs  frontend.rs  lib.rs  main.rs  resolution.rs
crates/aromac/src/common/: identifier.rs  spanned.rs
crates/aromac/src/compiler/: compile_job.rs  error.rs  passes.rs  virtual_header.rs
crates/aromac/src/compiler/compile_job/: passes.rs
crates/aromac/src/compiler/compile_job/passes/: declaration_discovery.rs  fully_qualify.rs  id_creation.rs  type_check.rs
crates/aromac/src/compiler/passes/: fully_qualify.rs
crates/aromac/src/frontend/: lexer.rs  syntactic_ast.rs  token.rs
crates/aromac/src/frontend/lexer/: nom_buf_reader.rs  token_parsing.rs
crates/aromac/src/native/: linux.rs  macos.rs  windows.rs
crates/aromac/tests/: common.rs  compile_single_file.rs
crates/aromac/tests/aroma_files/: simple.aroma
crates/aromac_cli/: Cargo.toml
crates/aromac_cli/src/: args.rs  main.rs
crates/aromai/: Cargo.toml
crates/aromai/src/: main.rs
(+22 files in other folders)
