[workspace]
members = ["crates/*"]
exclude = ["crates/aroma_gc", "crates/aroma_gc_derive"]
resolver = "2"

[workspace.package]
authors = ["Joshua Radin <jradin16@gmail.com>"]
version = "0.0.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/joshradin/aroma"

[profile.release]
debug = true
