[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Joshua Radin <jradin16@gmail.com>"]
version = "0.0.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/joshradin/aroma"

[workspace.dependencies]
bitfield = "0.16.1"
bytes = "1.6.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.38", default-features = false }
clap = "4.5.11"
color-eyre = "0.6.3"
cranelift = "0.110.1"
cranelift-jit = "0.110.1"
cranelift-module = "0.110.1"
cranelift-native = "0.110.1"
env_logger = "0.11.5"
eyre = "0.6.12"
fern = "0.6.2"
indexmap = "2.3.0"
itertools = "0.13.0"
log = "0.4.22"
nom = "7.1.3"
owo-colors = "4.0.0"
parking_lot = "0.12.3"
paste = "1.0.15"
petgraph = "0.6.5"
rangemap = "1.5.1"
sysinfo = "0.31.2"
test-log = "0.2.16"
thiserror = "1.0.63"
derive_more = "~0.99.18"
strum = "~0.26.3"
clap_complete = "4.5.12"
regex = "1.10.6"
num_cpus = "1.16.0"
quote = "1.0.36"
syn = "2.0.74"
tempfile = "3.12.0"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"

[profile.release]
debug = true
