[package]
name = "aroma_ast"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = []
derive = ["dep:aroma_ast_derive"]

[dependencies]
aroma_ast_derive = { version = "0.0.0", path = "../aroma_ast_derive", optional = true }
aroma_types = { version = "0.0.0", path = "../aroma_types"}
itertools = { workspace = true }
thiserror = "1.0.63"
log = "0.4.22"
