[package]
name = "aroma_ast"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
aroma_types = { version = "0.0.0", path = "../aroma_types"}
aroma_tokens = { version = "0.0.0", path = "../aroma_tokens" }
aroma_visitor_gen = {version = "0.0.0", path="../aroma_visitor_gen"}
itertools = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
