[package]
name = "aroma_ast_parsing"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["io-std", "io-util", "fs"] }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
aroma_ast = { version = "0.0.0", path = "../aroma_ast" }
aroma_tokens = { version = "0.0.0", path = "../aroma_tokens", features = ["derive"] }
aroma_common = { version = "0.0.0", path = "../aroma_common" }
aroma_types = { version = "0.0.0", path = "../aroma_types" }
nom.workspace = true
thiserror.workspace = true
tracing.workspace = true
aroma_visitor_gen = { version = "0.0.0", path = "../aroma_visitor_gen" }
[dev-dependencies]
tempfile = { workspace = true }
test-log.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
