[package]
name = "aroma_bytecode"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
aroma_visitor_gen = { version = "0.0.0", path = "../aroma_visitor_gen" }
strum = "~0.26.3"
thiserror = "1.0.63"
derive_more = "~0.99.18"