[package]
name = "aroma_bytecode"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
aroma_visitor_gen = { version = "0.0.0", path = "../aroma_visitor_gen" }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
derive_more = { workspace = true }
