[package]
name = "aroma_gc_derive"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.72", features = ["derive", "parsing"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"