[package]
name = "aroma_tasks"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
petgraph.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt", "sync"] }
test-log = { workspace = true, features = ["trace"] }
tokio-test = { workspace = true }
