[package]
name = "aroma_vm"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = []
macros = []
debug_all = ["debug_trace_execution"]
debug_trace_execution = []
jit = [
    "dep:cranelift",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native"
]

[[example]]
name = "fibonacci"
required-features = ["macros"]
[[example]]
name = "factorial"
required-features = ["macros"]
[[example]]
name = "fibonacci_jit_compare"
required-features = ["macros", "jit"]

[dependencies]
bitfield = "0.16.1"
bytes = "1.6.1"
nom = "7.1.3"
parking_lot = "0.12.3"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_off"] }
derive_more = "0.99.18"


cranelift = { version = "0.110.1", optional = true }
cranelift-module = { version = "0.110.1", optional = true }
cranelift-jit = { version = "0.110.1", optional = true }
cranelift-native = { version = "0.110.1", optional = true }

[dev-dependencies]
test-log = "0.2.16"
