[package]
name = "aroma_vm"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["jit"]
macros = []
debug_all = ["debug_trace_execution"]
debug_trace_execution = []
jit = [
    "dep:cranelift",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
    "dep:rangemap",
    "dep:petgraph",
    "dep:indexmap"
]

[dependencies]
bitfield = "0.16.1"
bytes = "1.6.1"
nom = "7.1.3"
parking_lot = "0.12.3"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_off"] }
derive_more = "0.99.18"
cfg-if = "1.0.0"
itertools = "0.13.0"
aroma_visitor_gen = { version = "0.0.0", path = "../aroma_visitor_gen" }

cranelift = { version = "0.110.1", optional = true }
cranelift-module = { version = "0.110.1", optional = true }
cranelift-jit = { version = "0.110.1", optional = true }
cranelift-native = { version = "0.110.1", optional = true }
rangemap = { version = "1.5.1", optional = true }
petgraph = { version = "0.6.5", optional = true }
indexmap = { version = "2.3.0", optional = true }


[dev-dependencies]
test-log = "0.2.16"
env_logger = "0.11.5"

[build-dependencies]
itertools = "0.13.0"

[[example]]
name = "fibonacci"
required-features = ["macros"]
[[example]]
name = "factorial"
required-features = ["macros"]
[[example]]
name = "fibonacci_jit_compare"
required-features = ["macros", "jit"]

