[package]
name = "aroma_vm"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["jit"]
macros = []
debug_all = ["debug_trace_execution"]
debug_trace_execution = []
jit = [
    "dep:cranelift",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
    "dep:rangemap",
    "dep:petgraph",
    "dep:indexmap"
]

[dependencies]
aroma_bytecode = { version = "0.0.0", path = "../aroma_bytecode"}

bitfield = { workspace = true }
bytes = { workspace = true }
nom = { workspace = true }
parking_lot = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
log = { workspace = true, features = ["max_level_trace", "release_max_level_off"] }
derive_more = { workspace = true }
cfg-if = { workspace = true }
itertools = { workspace = true }


cranelift = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }
rangemap = { workspace = true, optional = true }
petgraph = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }


[dev-dependencies]
test-log = { workspace = true }
env_logger = { workspace = true }

[build-dependencies]
itertools = { workspace = true }

[[example]]
name = "fibonacci"
required-features = ["macros"]
[[example]]
name = "factorial"
required-features = ["macros"]
[[example]]
name = "fibonacci_jit_compare"
required-features = ["macros", "jit"]

