[package]
name = "aromac"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
eyre = { workspace = true }
chrono = { workspace = true, features = ["alloc", "std", "clock"] }
fern = { workspace = true }
log = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
aroma_bytecode = { version = "0.0.0", path = "../aroma_bytecode" }
aroma_visitor_gen = { version = "0.0.0", path = "../aroma_visitor_gen" }
clap_complete = { workspace = true }
cfg-if = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
num_cpus = { workspace = true }
itertools.workspace = true
parking_lot.workspace = true
aroma_ast_parsing = { version = "0.0.0", path = "../aroma_ast_parsing" }
aroma_ast = { version = "0.0.0", path = "../aroma_ast" }


[dev-dependencies]
test-log = { workspace = true }
