[package]
name = "aromac"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# tracing
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }
tracing = { workspace = true }

# cli
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
eyre = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
clap_complete = { workspace = true }

chrono = { workspace = true, features = ["alloc", "std", "clock"] }
cfg-if = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
num_cpus = { workspace = true }
itertools.workspace = true
parking_lot.workspace = true
derive_more.workspace = true
tokio = { workspace = true, features = ["full", "tracing"] }

# aroma dependencies
aroma_bytecode = { version = "0.0.0", path = "../aroma_bytecode" }
aroma_visitor_gen = { version = "0.0.0", path = "../aroma_visitor_gen" }
aroma_ast_parsing = { version = "0.0.0", path = "../aroma_ast_parsing" }
aroma_ast = { version = "0.0.0", path = "../aroma_ast" }
aroma_types = { version = "0.0.0", path = "../aroma_types" }
aroma_tokens = { version = "0.0.0", path = "../aroma_tokens" }
aroma_files = { version = "0.0.0", path = "../aroma_files" }



[dev-dependencies]
test-log = { workspace = true }
