[package]
name = "aromac_cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "aromac"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }

# cli
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
eyre = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
clap_complete = { workspace = true }
aromac = { version = "0.0.0", path = "../aromac" }
aroma_files = { version = "0.0.0", path = "../aroma_files" }
aroma_cli_common = { version = "0.0.0", path="../aroma_cli_common"}
cfg-if = { workspace = true }
chrono.workspace = true

# inter-dependencies
