[package]
name = "aromai"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
aroma_vm = { version = "0.0.0", path = "../aroma_vm" }
clap = { version = "4.5.11", features = ["derive"] }
fern = "0.6.2"
log = "0.4.22"
