[package]
name = "aromai"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["jit"]
jit = ["aroma_vm/jit"]

[dependencies]
aroma_vm = { version = "0.0.0", path = "../aroma_vm", features = ["macros", "debug_all"] }
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
eyre = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
chrono = { workspace = true, features = ["alloc", "std", "clock"] }
sysinfo = { workspace = true }
